[feat] add support for modules to javac.py code cleanup