@@ -54,32 +54,149 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <!--                <version>3.5.1</version>-->
                 <version>3.8.1</version>
                 <configuration>
-                    <!--                    <source>1.8</source>-->
-                    <!--                    <target>1.8</target>-->
                     <source>11</source>
                     <target>11</target>
                     <compilerArgs>
                         <arg>--add-modules</arg>
                         <arg>ALL-SYSTEM</arg>
                         <arg>--add-exports</arg>
-                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.graph=ALL-UNNAMED</arg>
+                        <arg>jdk.internal.vm.ci/jdk.vm.ci.common=tornado.drivers.opencl</arg>
                         <arg>--add-exports</arg>
-                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.graph.spi=ALL-UNNAMED</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.hotspot.meta=tornado.drivers.opencl,tornado.runtime</arg>
                         <arg>--add-exports</arg>
-                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.lir.gen=ALL-UNNAMED</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.replacements.classfile=tornado.drivers.opencl</arg>
                         <arg>--add-exports</arg>
-                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodeinfo=ALL-UNNAMED</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.common.alloc=tornado.drivers.opencl</arg>
                         <arg>--add-exports</arg>
-                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes=ALL-UNNAMED</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.common.util=tornado.drivers.opencl,tornado.runtime</arg>
                         <arg>--add-exports</arg>
-                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.calc=ALL-UNNAMED</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.common.cfg=tornado.drivers.opencl</arg>
                         <arg>--add-exports</arg>
-                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.spi=ALL-UNNAMED</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.lir=tornado.drivers.opencl,tornado.runtime</arg>
                         <arg>--add-exports</arg>
-                        <arg>jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.lir.framemap=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.ci/jdk.vm.ci.meta=tornado.drivers.opencl,tornado.runtime,tornado.annotation</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.ci/jdk.vm.ci.code=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.graph=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.graph.spi=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.lir.gen=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodeinfo=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.calc=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.spi=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.api.runtime=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.code=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.common=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.target=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.debug=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.hotspot=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.java=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.lir.asm=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.lir.phases=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.graphbuilderconf=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.options=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.tiers=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.util=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.printer=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.runtime=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.ci/jdk.vm.ci.runtime=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.graph.iterators=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.java=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.bytecode=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.common=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.common.spi=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.api.replacements=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.replacements=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.common.inlining=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.phases=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.common.type=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.extended=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.loop=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.common.inlining.info=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.common.inlining.policy=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.common.inlining.walker=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.loop.phases=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.debug=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.memory=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.util=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.virtual=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.lir.constopt=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.ci/jdk.vm.ci.hotspot=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.asm=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.gc=tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.cfg=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.schedule=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.virtual.phases.ea=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.lir.ssa=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.common.calc=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.gen=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.core.match=tornado.drivers.opencl</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.memory.address=tornado.drivers.opencl,tornado.runtime</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.nodes.type=tornado.drivers.opencl</arg>
                     </compilerArgs>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
@@ -158,12 +275,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.5</version>
+            <version>2.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.5</version>
+            <version>2.12.1</version>
         </dependency>
 
 
